--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
-    "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
