changed mobile styles

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spider_solitare_game",
+  "name": "spider_solitaire_game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
